<resources>
    <string name="app_name">Cabinet Chef</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="hello_world">Hello World</string>
    <string name="logout">LOGOUT</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_your_email_address">Please enter your email address:</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="recipe_image">Recipe image</string>
    <string name="cook_time">Cook Time: %1$d minutes</string>
    <string name="add_ingredient_hint">Add an ingredient</string>
    <string name="add_ingredient">Add</string>
    <string name="add">Add</string>




    <string name="filters">FILTERS</string>
    <string name="meal_time">Meal Time</string>
    <string name="item_preferences">Item preferences</string>
    <string name="price">Price</string>
    <string name="cooking_difficulty">Cooking Difficulty</string>
    <string name="search">Search…</string>
    <string name="menu_button">=</string>
    <string name="Allergies">Allergies</string>
    <string name="household_member_count">Household Member count</string>
    <string name="ingredients_to_use">Ingredients to use</string>
    <string name="back">Back</string>
    <string name="select">Select</string>
    <string name="to_home_screen">Home Screen</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="other_buttons">Other</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="LightMode">Light Mode</string>
    <string name="textSize">Text Size</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="pantry">Pantry</string>
    <string name="utensils">Utensils</string>
    <string name="settings">Settings</string>
    <string name="test_firebase">Test Firebase</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="confirm">Confirm</string>
    <string name="delete_warning">This action cannot be undone.</string>
    <string name="delete_confirmation">Are you sure you want to delete your account?</string>
    <string name="lets_get_cooking">Lets Get Cooking</string>
    <string name="ingredients">Ingredients</string>
    <string name="time_to_cook">Time to Cook</string>
    <string name="instructions">Instructions (READ ALL BEFORE STARTING)</string>
    <string name="done_cooking">Done Cooking</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="toggle_color_theme">Toggle Color Theme</string>
    <string name="finish_cooking">Finish Cooking</string>
    <string name="delete">Delete?\n</string>
    <string name="allergen_warning">Allergen Warning!</string>
    <string name="app_logo">app logo</string>
    <string name="rah">rah</string>
</resources>