<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/popup_menu_layout.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Dark.Mode.4"
    android:padding="8dp"
    android:layout_weight="1" >
    <!--background tint is background color
        typeface is font
        fontfamily is custom fonts
        custom textcolors are setup in colors.xml
    -->

    <Button
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lightmode_button_outlines"
        android:textColor="@color/Light.Mode.Text"
        android:typeface="monospace"
        android:layout_marginTop="2dp"
        android:text="@string/profile"/>

    <Button
        android:id="@+id/Favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lightmode_button_outlines"
        android:textColor="@color/Light.Mode.Text"
        android:layout_marginTop="2dp"
        android:typeface="monospace"
        android:text="@string/favorites"/>

    <Button
        android:id="@+id/Pantry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lightmode_button_outlines"
        android:textColor="@color/Light.Mode.Text"
        android:layout_marginTop="2dp"
        android:typeface="monospace"
        android:text="@string/pantry"/>

<!--    <Button-->
<!--        android:id="@+id/Utensils"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/lightmode_button_outlines"-->
<!--        android:textColor="@color/Light.Mode.Text"-->
<!--        android:layout_marginTop="2dp"-->
<!--        android:typeface="monospace"-->
<!--        android:text="@string/utensils"/>-->

    <Button
        android:id="@+id/Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lightmode_button_outlines"
        android:textColor="@color/Light.Mode.Text"
        android:layout_marginTop="2dp"
        android:typeface="monospace"
        android:text="@string/settings"/>

    <!-- Add more buttons or views as needed -->

</LinearLayout>