<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/Dark.Mode.1"
    android:layout_weight="1" >

    <!--background tint is background color
        typeface is font
        fontfamily is custom fonts
        custom textcolors are setup in colors.xml
    -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:backgroundTint="@color/Light.Mode.4"
        android:text="@string/back"
        android:textColor="@color/Light.Mode.Text"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/ColorModePreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Light.Mode.1"
        android:textColor="@color/Light.Mode.Text"
        android:typeface="monospace"
        android:text="@string/LightMode"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:backgroundTint="@color/Light.Mode.2"
        android:textColor="@color/Light.Mode.Text"
        android:padding="8dp"
        android:text="@string/logout"
        android:typeface="monospace"
        />

    <Button
        android:id="@+id/textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:backgroundTint="@color/Light.Mode.3"
        android:textColor="@color/Light.Mode.Text"
        android:padding="8dp"
        android:text="@string/textSize"
        android:typeface="monospace"
        />


</LinearLayout>