<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dark_mode_popup_background"
    android:padding="16dp"
    android:layout_weight="1"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/areYouSureTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="50dp"
        android:typeface="monospace"
        android:textColor="@color/Dark.Mode.Text"
        android:gravity="center"
        />

    <Button
        android:id="@+id/confirmNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lightmode_button_outlines"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Light.Mode.Text"
        android:typeface="monospace"
        android:text="@string/no"
        android:layout_below="@+id/areYouSureTxt"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/confirmYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lightmode_button_outlines"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Light.Mode.Text"
        android:typeface="monospace"
        android:text="@string/yes"
        android:layout_below="@+id/areYouSureTxt"
        android:layout_alignParentStart="true" />
</RelativeLayout>
