<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/Light.Mode.1"
    tools:context=".Login.Login">

    <TextView
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/Light.Mode.Text"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Light.Mode.1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/Light.Mode.Text"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Light.Mode.1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Light.Mode.1"
                android:hint="@string/password"
                android:inputType="text"
                android:textColor="@color/Light.Mode.Text"
                tools:ignore="TouchTargetSizeCheck" />


            <CheckBox
                android:id="@+id/hide_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/password"
                android:layout_alignBottom="@+id/password"
                android:button="@drawable/baseline_eye_24"
                android:elevation="2dp"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>



    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_mode_button_outlines"
        android:textColor="@color/Dark.Mode.Text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:textColor="@color/Light.Mode.Text"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/registerNow"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>