<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/Light.Mode.1"
    android:padding="8dp"
    tools:context=".MainActivity">
    <!--background tint is background color
        typeface is font
        fontfamily is custom fonts
        custom textcolors are setup in colors.xml


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/app_logo"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:contentDescription="@string/app_name"
        android:layout_above="@+id/user_details"/>

-->
    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/home_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_get_cooking"
        android:textColor="@color/Dark.Mode.Text"
        android:typeface="monospace"
        android:padding="8dp"
        android:layout_below="@+id/user_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/dark_mode_button_outlines"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/dark_mode_button_outlines"
        android:textColor="@color/Dark.Mode.Text"
        android:padding="8dp"
        android:text="@string/logout"
        android:typeface="monospace" />


</RelativeLayout>